--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,5 +14,6 @@ phases:
 artifacts:
   files:
     - dist/*
+  base-directory: .
   name: sample-python-app-artifacts
   bucket-name: sample-python-app-codebuild
